feat: implementa a estrutura da página home

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,14 @@
-<p>home works!</p>
+<header>
+  <app-menu-bar></app-menu-bar>
+</header>
+<section class="carousel">
+  <app-carousel></app-carousel>
+</section>
+<section class="container__articles">
+  <main class="main__article">
+    <app-main-card></app-main-card>
+  </main>
+  <aside class="side__article">
+    <app-side-card></app-side-card>
+  </aside>
+</section>
