feat: implementa a estrutura HTML do side-card

--- a/src/app/components/side-card/side-card.component.html
+++ b/src/app/components/side-card/side-card.component.html
@@ -1,1 +1,8 @@
-<p>side-card works!</p>
+<div class="container__side-card">
+  <div class="container__Image">
+    <img src="" alt="">
+  </div>
+  <span></span>
+  <h1>title</h1>
+  <span>hashtag</span>
+</div>
