--- a/src/app/components/main-card/main-card.component.html
+++ b/src/app/components/main-card/main-card.component.html
@@ -1,1 +1,14 @@
-<p>main-card works!</p>
+<div class="container__main-card">
+  <header>
+    <button>s2</button>
+    <span class="container__date">date</span>
+    <h1 class="container__title">title</h1>
+  </header>
+  <div class="container__image">
+    <img src="" alt="" srcset="">
+  </div>
+  <div class="container__text">
+    <p>resume</p>
+  </div>
+  <button>read more</button>
+</div>
