feat: adiciona um schema para comentários, implementa as variáveis de estado do componente main-card e seta uma variável como input do component main-card

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -6,7 +6,9 @@
 </section>
 <section class="container__articles">
   <main class="main__article">
-    <app-main-card></app-main-card>
+    <app-main-card
+      id=""
+    ></app-main-card>
   </main>
   <aside class="side__article">
     <app-side-card></app-side-card>
