feat: linka os atributos da classe main-card com as variáveis do main-card.html

--- a/src/app/components/main-card/main-card.component.html
+++ b/src/app/components/main-card/main-card.component.html
@@ -1,14 +1,15 @@
 <div class="container__main-card">
   <header>
     <button>s2</button>
-    <span class="container__date">date</span>
-    <h1 class="container__title">title</h1>
+    <span class="container__date">{{date}}</span>
+    <h1 class="container__title">{{title}}</h1>
+    <p>{{hash}}</p>
   </header>
   <div class="container__image">
-    <img src="" alt="" srcset="">
+    <img src={{image}} alt="main-card image">
   </div>
   <div class="container__text">
-    <p>resume</p>
+    <p>{{description}}</p>
   </div>
   <button>read more</button>
 </div>
