feat: implementa o loop para renderizar os side-cards na tela e implementa a lógica de passar as informações do componente home para o side-card

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -21,6 +21,16 @@
     </ul>
   </main>
   <aside class="side__article">
-    <app-side-card></app-side-card>
+    <ul>
+      <li *ngFor="let article of sideArticles">
+        <app-side-card
+        [id]="article.id"
+        [title]="article.title"
+        [hash]="article.hash"
+        [date]="article.date"
+        [image]="article.image"
+        ></app-side-card>
+      </li>
+    </ul>
   </aside>
 </section>
