--- a/src/app/components/side-card/side-card.component.html
+++ b/src/app/components/side-card/side-card.component.html
@@ -1,8 +1,8 @@
 <div class="container__side-card">
   <div class="container__image">
-    <img src="" alt="">
+    <img src={{image}} alt="">
   </div>
-  <span></span>
-  <h1 class="container__title">title</h1>
-  <span class="container__hashtag">hashtag</span>
+  <span>{{date}}</span>
+  <h1 class="container__title">{{title}}</h1>
+  <span class="container__hashtag">{{hash}}</span>
 </div>
