feat: implementa o componente menu-bar e seu subcomponente social-media.component

--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -1,1 +1,18 @@
-<p>menu-bar works!</p>
+<div>
+  <div>
+    <div>
+      email
+    </div>
+    <ul>
+      <li>
+        <app-social-media-contact
+
+        >
+        </app-social-media-contact>
+      </li>
+    </ul>
+  </div>
+  <div>
+    title
+  </div>
+</div>
