--- a/src/app/components/side-card/side-card.component.html
+++ b/src/app/components/side-card/side-card.component.html
@@ -1,6 +1,6 @@
 <div class="container__side-card">
   <div class="container__image">
-    <img src={{image}} alt="">
+    <img src={{image}} alt="side-card image">
   </div>
   <span>{{date}}</span>
   <h1 class="container__title">{{title}}</h1>
