--- a/src/app/components/social-media-contact/social-media-contact.component.html
+++ b/src/app/components/social-media-contact/social-media-contact.component.html
@@ -1,5 +1,5 @@
 <div>
-  <a href="{{link}}">
-    <lucide-icon name="TwitterIcon" class="my-icon"></lucide-icon>
+  <a href="{{link}}" target="_blank">
+    <lucide-icon name="{{media}}" class="my-icon"></lucide-icon>
   </a>
 </div>
