--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -1,7 +1,7 @@
-<div>
-  <div>
+<div class="conteiner__menu-bar">
+  <div class="container__contact">
     <div>
-      email
+      <a href="mailto:silmarfnascimento@gmail.com">silmarfnascimento@gmail.com</a>
     </div>
     <ul>
       <li *ngFor="let media of contacts; let i = index">
@@ -14,6 +14,6 @@
     </ul>
   </div>
   <div>
-    title
+    <h1>title</h1>
   </div>
 </div>
