fix: atualiza os componentes e seus atributos baseado no fakeData recebido

--- a/src/app/components/side-card/side-card.component.html
+++ b/src/app/components/side-card/side-card.component.html
@@ -1,8 +1,8 @@
 <div class="container__side-card">
   <div class="container__image">
-    <img src={{image}} alt="side-card image">
+    <img src={{image255}} alt="side-card image">
   </div>
-  <span>{{date}}</span>
+  <span>by {{author}}</span>
   <h1 class="container__title">{{title}}</h1>
   <span class="container__hashtag">{{hash}}</span>
 </div>
