--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -12,8 +12,9 @@
           [id]="article.id"
           [title]="article.title"
           [hash]="article.hash"
-          [date]="article.date"
-          [image]="article.image"
+          [author]="article.author"
+          [image825]="article.image825"
+          [image1800]="article.image1800"
           [description]="article.description"
           [comments]="article.comments"
         ></app-main-card>
@@ -27,8 +28,9 @@
         [id]="article.id"
         [title]="article.title"
         [hash]="article.hash"
-        [date]="article.date"
-        [image]="article.image"
+        [author]="article.author"
+        [image255]="article.image255"
+        [image825]="article.image825"
         ></app-side-card>
       </li>
     </ul>
