fix: altera alguns caminhos de URL para as imagens

--- a/src/app/components/main-card/main-card.component.html
+++ b/src/app/components/main-card/main-card.component.html
@@ -1,12 +1,12 @@
 <div class="container__main-card">
   <header>
     <button>s2</button>
-    <span class="container__date">{{date}}</span>
+    <span class="container__author">{{author}}</span>
     <h1 class="container__title">{{title}}</h1>
     <p>{{hash}}</p>
   </header>
   <div class="container__image">
-    <img src={{image}} alt="main-card image">
+    <img src={{image825}} alt="main-card image">
   </div>
   <div class="container__text">
     <p>{{description}}</p>
