feat:implementa o CSS do componente main-card

--- a/src/app/components/main-card/main-card.component.html
+++ b/src/app/components/main-card/main-card.component.html
@@ -1,5 +1,5 @@
 <div class="container__main-card">
-  <header>
+  <header class="container__header">
     <button>
       <lucide-icon name="Heart" class="my-icon"></lucide-icon>
     </button>
