feat: implementa o CSS do componente side-card

--- a/src/app/components/side-card/side-card.component.html
+++ b/src/app/components/side-card/side-card.component.html
@@ -3,6 +3,6 @@
     <img src={{image255}} alt="side-card image">
   </div>
   <h1 class="container__title">{{title}}</h1>
-  <span>by {{author}}</span>
+  <span class="container__author">by {{author}}</span>
   <span class="container__hashtag">{{hash}}</span>
 </div>
