--- a/src/app/components/menu-bar/menu-bar.component.css
+++ b/src/app/components/menu-bar/menu-bar.component.css
@@ -18,6 +18,7 @@
 }
 
 .container__social-media {
+  margin-top: 0.75rem;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -31,4 +32,7 @@
 }
 
 .container__title {
+  color: #2f2f2f;
+  font-family: "Bad Script", cursive;
+  font-size: 2.5em;
 }
