--- a/src/app/components/carousel/carousel.component.html
+++ b/src/app/components/carousel/carousel.component.html
@@ -1,1 +1,20 @@
-<p>carousel works!</p>
+<section>
+  <div
+    class="photo"
+    [ngStyle]="{ 'background-image': 'url(' + images[indexActiveImage] + ')' }"
+  ></div>
+  <div class="control-btn">
+    <button
+      *ngFor="let image of images; index as i"
+      [class.active]="i === indexActiveImage"
+      (click)="stopTimer(); activateImage(i)"
+    ></button>
+  </div>
+  <img
+  *ngFor="let image of images"
+  [src]="image"
+  width="1"
+  height="1"
+  style="opacity: 0; position: fixed"
+/>
+</section>
