--- a/src/app/components/main-card/main-card.component.css
+++ b/src/app/components/main-card/main-card.component.css
@@ -15,14 +15,6 @@
   width: 100%;
 }
 
-.container__header > button {
-  border: none;
-  background-color: #ffffff;
-  align-self: flex-end;
-  padding-top: 20px;
-  padding-right: 5%;
-}
-
 .container__header > h1 {
   margin: 0;
   margin-bottom: 0.5rem;
@@ -73,7 +65,31 @@
   line-height: 1.75em;
 }
 
+.container__social {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+  width: 90%;
+  margin: 1rem 0;
+}
+
 .container__comment {
+  align-self: flex-end;
+  padding-right: 5%;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.container__comment > span {
+  font-family: "Roboto", sans-serif;
+  align-self: center;
+  margin-right: 0.75rem;
+}
+
+.container__favorit {
   align-self: flex-end;
   padding-right: 5%;
 }
@@ -83,5 +99,5 @@
   background-color: gray;
   padding: 10px 50px;
   border-radius: 5%;
-  margin-bottom: 25px;
+  margin-bottom: 2rem;
 }
