--- a/src/app/components/menu-bar/menu-bar.component.css
+++ b/src/app/components/menu-bar/menu-bar.component.css
@@ -36,3 +36,8 @@
   font-family: "Bad Script", cursive;
   font-size: 2.5em;
 }
+
+.container__title > h1 {
+  margin-top: 0;
+  margin-bottom: 2.5rem;
+}
