feat: implementa a lógica de clicar no botao favorito e mudar o estado e a logica de clicar no botao para redirecionar a pagina

--- a/src/app/components/main-card/main-card.component.html
+++ b/src/app/components/main-card/main-card.component.html
@@ -11,11 +11,11 @@
     <p>{{description}}</p>
   </div>
   <div class="container__social">
-    <div class="container__comment">
+    <div class="container__comment" (click)="handleComments()">
       <span>{{comments.length}} comments</span>
       <lucide-icon name="MessageCircle" class="my-icon"></lucide-icon>
     </div>
-    <div class="container__favorit">
+    <div class="container__favorit" (click)="toggleFavorite()">
       <lucide-icon name="Heart" class="my-icon"></lucide-icon>
     </div>
   </div>
