--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -1,4 +1,5 @@
 .container__articles {
+  padding-top: 3rem;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -17,6 +18,10 @@ app-side-card {
   flex-direction: row;
   justify-content: center;
   align-items: center;
+}
+
+.side__article {
+  margin-top: 6.25rem;
 }
 
 .side__article > ul > li {
