feat: implementa a logica de ao clicar no icone de favorito o mesmo muda ded cor dependendo do estado

--- a/src/app/components/main-card/main-card.component.html
+++ b/src/app/components/main-card/main-card.component.html
@@ -23,7 +23,11 @@
       </a>
     </div>
     <div class="container__favorit" (click)="toggleFavorite()">
-      <lucide-icon name="Heart" class="my-icon"></lucide-icon>
+      <lucide-icon
+        name="Heart"
+        class="my-icon"
+        [ngStyle]="{ 'fill': isFavorite ? '#000' : '#fff' }"
+      ></lucide-icon>
     </div>
   </div>
   <button [routerLink]="['content','mainCard', id]">READ MORE</button>
