--- a/src/app/components/comment-section/comment-section.component.html
+++ b/src/app/components/comment-section/comment-section.component.html
@@ -1,5 +1,7 @@
 <div class="container__comment-section">
-  <h2>author</h2>
-  <p class="conteinar__content">comment</p>
-  <span>date</span>
+  <h2>{{author}}</h2>
+  <p
+    class="conteinar__content"
+    *ngFor="let paragraph of comment"
+  >{{paragraph}}</p>
 </div>
