--- a/src/app/pages/content/content.component.html
+++ b/src/app/pages/content/content.component.html
@@ -3,19 +3,23 @@
 </header>
 <main>
   <section>
-    <span>data</span>
-    <h1>Titulo</h1>
-    <span>hashtags</span>
+    <h1>{{article?.title}}</h1>
+    <span>by {{article?.author}}</span>
+    <span>{{hash}}</span>
     <div class="conteiner__image">
-      <img src="#" alt="">
+      <img src="{{article?.image825}}" alt="">
     </div>
   </section>
   <a [routerLink]="['']"><< voltar</a>
-  <section>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque ligula purus, finibus nec orci nec, faucibus facilisis tellus. Pellentesque quis tempor ante. Ut bibendum finibus neque vitae facilisis. Aenean blandit, justo vitae lacinia blandit, odio ex aliquam est, elementum ornare risus nisi in lacus. Nullam porttitor, eros nec dictum aliquet, tortor odio sodales purus, quis sagittis metus nunc quis diam. Pellentesque nec rutrum mi. Quisque finibus ipsum eu porttitor ultrices. Nulla facilisi. Maecenas at ultricies risus, nec viverra felis. Phasellus aliquam feugiat metus, non tincidunt elit mattis in. Sed sagittis ultrices dolor, in rhoncus dolor scelerisque id.</p>
-    <p>Mauris sed turpis vel nibh fringilla elementum id sit amet felis. Praesent et aliquet sem. Morbi finibus, arcu ac dictum tempor, eros velit condimentum mi, vitae finibus odio urna vel nibh. Aliquam purus tortor, auctor vel ex vel, malesuada lacinia libero. Nulla facilisi. Suspendisse venenatis felis at odio iaculis, at placerat mi laoreet. Donec euismod ante in ullamcorper bibendum. Sed id eros nulla. Morbi et tempus leo, eget scelerisque lorem. Aliquam sapien nibh, cursus sit amet tortor eu, feugiat accumsan est. Mauris id velit finibus, vehicula augue quis, condimentum eros.</p>
+  <section class="container__comments">
+    <p
+    *ngFor="let paragraph of contentText"
+    >{{paragraph}}</p>
   </section>
 </main>
 <section class="container__comments">
-  <p> comentarios</p>
+  <app-comment-section
+    *ngFor="let comment of comments"
+    [comment]="comment"
+  ></app-comment-section>
 </section>
