feat: implementa o resta das funcionalidades dos elementos da pagina content e implementa o componente comment-section

--- a/src/app/components/comment-section/comment-section.component.html
+++ b/src/app/components/comment-section/comment-section.component.html
@@ -2,6 +2,6 @@
   <h2>{{author}}</h2>
   <p
     class="conteinar__content"
-    *ngFor="let paragraph of comment"
+    *ngFor="let paragraph of paragraphs"
   >{{paragraph}}</p>
 </div>
