feat: create text-area component

--- a/src/app/components/menu-bar/menu-bar.component.css
+++ b/src/app/components/menu-bar/menu-bar.component.css
@@ -17,6 +17,11 @@
   margin-left: 2.5%;
 }
 
+.container__contact > div > a {
+  text-decoration: none;
+  color: inherit;
+}
+
 .container__social-media {
   margin-top: 0.75rem;
   display: flex;
