feat: implementa as rotas dos sideCards para a pagina Content

--- a/src/app/components/side-card/side-card.component.css
+++ b/src/app/components/side-card/side-card.component.css
@@ -12,6 +12,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  cursor: pointer;
 }
 
 .container__image > img {
@@ -26,6 +27,7 @@
   margin-top: 0.75rem;
   font-family: sans-serif;
   text-align: center;
+  cursor: pointer;
 }
 
 .container__side-card > .container__author {
